BACKLOG-12731: Fix for overlapping logo in PrimarNav in Safari

--- a/src/components/PrimaryNav/PrimaryNav.scss
+++ b/src/components/PrimaryNav/PrimaryNav.scss
@@ -3,6 +3,15 @@
 $primaryNavExpanded: 300px;
 $primaryNav: 56px;
 
+.logoCaptionGroup {
+    padding-right: 2.5rem;
+
+    visibility: hidden;
+    opacity: 0;
+
+    transition: visibility 0.15s, opacity 0.2s;
+}
+
 .primaryNav {
     position: fixed;
     top: 0;
@@ -25,6 +34,11 @@ $primaryNav: 56px;
         width: $primaryNavExpanded;
 
         box-shadow: 8px 0 16px 0 var(--color-gray_dark60);
+
+        .logoCaptionGroup {
+            visibility: visible;
+            opacity: 1;
+        }
     }
 }
 
@@ -39,10 +53,6 @@ $primaryNav: 56px;
     opacity: 0.6;
 }
 
-.logoCaptionGroup {
-    padding-right: 2.5rem;
-}
-
 .navHeader {
     height: $primaryNav;
 }
@@ -53,6 +63,8 @@ $primaryNav: 56px;
 }
 
 .navButton {
+    z-index: 9000;
+
     width: 40px;
     height: 40px;
     padding: 0;
